# ALS-Recommendation-System

./: .gitignore  0345.py  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: quick_start.ipynb
scripts/: demo.py  train.py
src/: __init__.py
src/data/: __init__.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  als.py  base.py  baselines.py
src/utils/: __init__.py
tests/: test_models.py
